--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>svideo</title>
+    <title>Sam Video</title>
     <link rel="stylesheet" href="/public/style.css" />
 </head>
+
 <body>
-    <div id="app"><%= body %></div>
+    <div id="app">
+        <%= body %>
+    </div>
     <script src="/public/bundle.js"></script>
 </body>
+
 </html>
